# ChangeLog for NetApp Cacti scripts
# Copyright 2008-2008 Chris Gianelloni; Distributed under the GPL v2
# $Header: $

  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Refactor a bit and clean up the query interface.

  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Adding an additional argument before the host when doing queries allows us
  to select the function to run, or run them all, if nothing is specifiied.

  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/script_server/netapp-volumes.xml:
  Change df to vol.

  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/script_server/netapp-luns.xml,
  cacti/netapp/script_server/netapp-volumes.xml:
  Uncomment the size checking for LUNs.

  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/script_server/netapp-luns.xml,
  cacti/netapp/script_server/netapp-volumes.xml,
  cacti/netapp/scripts/ss_netapp.php:
  Update the debugging in the top section of the script.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Change some arrays and variables to be unique.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  +cacti/netapp/script_server/netapp-volumes.xml:
  Adding script_server/netapp-volumes.xml for use with ss_netapp.php and the
  new ss_netapp_volumes function.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Renaming some of the oids array keys.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Call our volume function along side the lun function when called without a
  function argument.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Added ss_netapp_volumes, based on ss_netapp_luns and the old NetApp volume
  checks which used SNMP directly.
