@@ -8,7 +8,7 @@
 	<arg_query>query</arg_query>
 	<arg_get>get</arg_get>
 	<arg_num_indexes>num_indexes</arg_num_indexes>
-	<arg_prepend>|host_hostname| |host_snmp_version|:|host_snmp_port|:|host_snmp_timeout|:|host_snmp_community|:|host_snmp_username|:|host_snmp_password|:|host_snmp_auth_protocol|:|host_snmp_priv_passphrase|:|host_snmp_priv_protocol|:|host_snmp_context|</arg_prepend>
+	<arg_prepend>lun |host_hostname| |host_snmp_version|:|host_snmp_port|:|host_snmp_timeout|:|host_snmp_community|:|host_snmp_username|:|host_snmp_password|:|host_snmp_auth_protocol|:|host_snmp_priv_passphrase|:|host_snmp_priv_protocol|:|host_snmp_context|</arg_prepend>
 	<output_delimeter>!</output_delimeter>
 	<index_order>lunName:lunIndex</index_order>
 	<index_order_type>alphabetic</index_order_type>
