@@ -1,94 +1,94 @@
 <interface>
-   <name>Get NetApp Volumes</name>
-	<description>Queries a Netapp for a list of monitorable volumes</description>
+	<name>Get NetApp Volumes</name>
+	<description>Queries a Filer for a list of monitorable volumes</description>
 	<script_path>|path_cacti|/scripts/ss_netapp.php</script_path>
 	<script_function>ss_netapp_volumes</script_function>
 	<script_server>php</script_server>
 	<arg_index>index</arg_index>
 	<arg_query>query</arg_query>
 	<arg_get>get</arg_get>
-	<arg_prepend>|host_hostname| |host_snmp_version|:|host_snmp_port|:|host_snmp_timeout|:|host_snmp_community|:|host_snmp_username|:|host_snmp_password|:|host_snmp_auth_protocol|:|host_snmp_priv_passphrase|:|host_snmp_priv_protocol|:|host_snmp_context|</arg_prepend>
+	<arg_prepend>vol |host_hostname| |host_snmp_version|:|host_snmp_port|:|host_snmp_timeout|:|host_snmp_community|:|host_snmp_username|:|host_snmp_password|:|host_snmp_auth_protocol|:|host_snmp_priv_passphrase|:|host_snmp_priv_protocol|:|host_snmp_context|</arg_prepend>
 	<output_delimeter>!</output_delimeter>
-	<index_order>volMountedOn:volIndex</index_order>
+	<index_order>volName:volIndex</index_order>
 	<index_order_type>alphabetic</index_order_type>
 	<index_title_format>|chosen_order_field|</index_title_format>
 
-   <fields>
-      <volIndex>
-         <name>Index</name>
-         <direction>input</direction>
-         <query_name>index</query_name>
-      </volIndex>
-      <volMountedOn>
-         <name>Description</name>
-         <direction>input</direction>
-         <query_name>name</query_name>
-      </volMountedOn>
-      <volKBytesTotal>
-         <name>KBytesTotal</name>
-         <direction>output</direction>
-         <query_name>kbtotal</query_name>
-      </volKBytesTotal>
-      <volKBytesUsed>
-         <name>KBytesUsed</name>
-         <direction>output</direction>
-         <query_name>kbused</query_name>
-      </volKBytesUsed>
-      <volKBytesAvail>
-         <name>KBytesAvail</name>
-         <direction>output</direction>
-         <query_name>kbfree</query_name>
-      </volKBytesAvail>
-	  <volKBytesShared>
-	     <name>KBytesShared</name>
-         <direction>output</direction>
-         <query_name>kbshared</query_name>
-	  </volKBytesShared>
-	  <volKBytesSaved>
-	     <name>KBytesSaved</name>
-         <direction>output</direction>
-         <query_name>kbsaved</query_name>
-	  </volKBytesSaved>
-      <volPerCentKBytesCapacity>
-         <name>PerCentKBytesCapacity</name>
-         <direction>output</direction>
-         <query_name>usedper</query_name>
-      </volPerCentKBytesCapacity>
-      <volPerCentKBytesSaved>
-         <name>PerCentKBytesSaved</name>
-         <direction>output</direction>
-         <query_name>savedper</query_name>
-      </volPerCentKBytesSaved>
-      <volInodesUsed>
-         <name>InodesUsed</name>
-         <direction>output</direction>
-         <query_name>iused</query_name>
-      </volInodesUsed>
-      <volInodesFree>
-         <name>InodesFree</name>
-         <direction>output</direction>
-         <query_name>ifree</query_name>
-      </volInodesFree>
-      <volPerCentInodeCapacity>
-         <name>PerCentInodeCapacity</name>
-         <direction>output</direction>
-         <query_name>iusedper</query_name>
-      </volPerCentInodeCapacity>
-      <volMaxFilesAvail>
-         <name>MaxFilesAvail</name>
-         <direction>output</direction>
-         <query_name>ffree</query_name>
-      </volMaxFilesAvail>
-      <volMaxFilesUsed>
-         <name>MaxFilesUsed</name>
-         <direction>output</direction>
-         <query_name>fused</query_name>
-      </volMaxFilesUsed>
-      <volMaxFilesPossible>
-         <name>MaxFilesPossible</name>
-         <direction>output</direction>
-         <query_name>fposs</query_name>
-      </volMaxFilesPossible>
+	<fields>
+		<volIndex>
+			<name>Index</name>
+			<direction>input</direction>
+			<query_name>index</query_name>
+		</volIndex>
+		<volName>
+			<name>Description</name>
+			<direction>input</direction>
+			<query_name>name</query_name>
+		</volName>
+		<volKBytesTotal>
+			<name>KBytes Total</name>
+			<direction>output</direction>
+			<query_name>kbtotal</query_name>
+		</volKBytesTotal>
+		<volKBytesUsed>
+			<name>KBytes Used</name>
+			<direction>output</direction>
+			<query_name>kbused</query_name>
+		</volKBytesUsed>
+		<volKBytesAvail>
+			<name>KBytes Free</name>
+			<direction>output</direction>
+			<query_name>kbfree</query_name>
+		</volKBytesAvail>
+		<volKBytesShared>
+			<name>KBytes Shared</name>
+			<direction>output</direction>
+			<query_name>kbshared</query_name>
+		</volKBytesShared>
+		<volKBytesSaved>
+			<name>KBytes Saved</name>
+			<direction>output</direction>
+			<query_name>kbsaved</query_name>
+		</volKBytesSaved>
+		<volPercentKBytesCapacity>
+			<name>Percent KBytes Capacity</name>
+			<direction>output</direction>
+			<query_name>usedper</query_name>
+		</volPercentKBytesCapacity>
+		<volPercentKBytesSaved>
+			<name>Percent KBytes Saved</name>
+			<direction>output</direction>
+			<query_name>savedper</query_name>
+		</volPercentKBytesSaved>
+		<volInodesUsed>
+			<name>Inodes Used</name>
+			<direction>output</direction>
+			<query_name>iused</query_name>
+		</volInodesUsed>
+		<volInodesFree>
+			<name>Inodes Free</name>
+			<direction>output</direction>
+			<query_name>ifree</query_name>
+		</volInodesFree>
+		<volPercentInodeCapacity>
+			<name>Percent Inode Capacity</name>
+			<direction>output</direction>
+			<query_name>iusedper</query_name>
+		</volPercentInodeCapacity>
+		<volMaxFilesFree>
+			<name>Max Files Free</name>
+			<direction>output</direction>
+			<query_name>ffree</query_name>
+		</volMaxFilesFree>
+		<volMaxFilesUsed>
+			<name>Max Files Used</name>
+			<direction>output</direction>
+			<query_name>fused</query_name>
+		</volMaxFilesUsed>
+		<volMaxFilesPossible>
+			<name>Max Files Possible</name>
+			<direction>output</direction>
+			<query_name>fposs</query_name>
+		</volMaxFilesPossible>
 
-   </fields>
+	</fields>
 </interface>
