@@ -3,6 +3,12 @@
 # $Header: $
 
   24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
+  cacti/netapp/script_server/netapp-luns.xml,
+  cacti/netapp/script_server/netapp-volumes.xml:
+  Clean up the XML for the volumes query and add lun/vol to the proper
+  files.
+
+  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   cacti/netapp/scripts/ss_netapp.php:
   Refactor a bit and clean up the query interface.
 
